Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-33389

QPSQLDriver - does not format QDateTime as Qt::ISODate

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • None
    • 4.8.1, 4.8.2, 4.8.3, 4.8.4, 4.8.5, 5.0.0, 5.0.1, 5.0.2, 5.1.0 , 5.1.1
    • Core: Plugins
    • None

    Description

      while executing an sql query, the postgres driver plugin is writing a QDateTime field to db, formatted like this:

      '2013-9-8 22:15:17.239'

      see QPSQLDriver::formatValue()

      Later, when reading same value from db, driver expects value as Qt::ISODate, which needs 0 padding for month/day etc

      see QPSQLResult::data()

      Since day, month are not padded, empty value is returned from postgres driver plugin

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            laknoll Lars Knoll
            ctarsoaga Cristian Tarsoaga
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes